# cxx11music

./: CMakeLists.txt  README.md  code.cpp  cxx11music.hpp  test.cpp
